[tool.poetry]
name = "aws-slapdash"
version = "0.3.1"
description = "Slapdash commands for interacting with AWS account"
authors = ["glyphack <sh.hooshyari@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.89"
boto3-stubs = "^1.24.89"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
